syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

package requests;

option java_package = "ar.edu.itba.pod.grpc.requests";
option java_multiple_files = true;

service AdminRequestsService{
    /*
    Los 3 m√©todos pedidos:
      - Rides
      - Tickets
      - Slots
     */

  // Entrada: SlotsRequestModel, Salida: SLots agregados
  rpc AddSlotsRequest(SlotsRequestModel) returns(google.protobuf.Int32Value);

  // Entrada: TicketRequestModel, Salida: Cantidad agregada
  rpc AddTicketsRequest(TicketsRequestModel) returns(google.protobuf.Int32Value);
}

message SlotsRequestModel{
  int32 day = 1;
  string ride = 2;
  int32 capacity = 3;
}

message TicketsRequestModel{
  string id = 1;
  PassType type = 2;
  int32 day = 3;
}

enum PassType{
  UNKNOWN = 0;
  UNLIMITED = 1;
  THREE = 2;
  HALF_DAY = 3;
}